Fixed2: SVG importer - improper stroke width when using width/height with viewBox Updated deprecated URL constructors in SVG importer